samples/_failures_safe/1761506014_3ab99e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_420484bb.c: In function ‘main’:
./samples/SAFE/__tmp_420484bb.c:174:9: error: expected expression at end of input
  174 |         size_t len =
      |         ^~~~~~
./samples/SAFE/__tmp_420484bb.c:174:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_420484bb.c:174:9: error: expected declaration or statement at end of input
